--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +10,35 @@
   <script type="text/javascript" src="./js/index.js"></script>
   <title>Ironhack cart</title>
 </head>
+
 <body>
+  <div class="content">
+    <header>
+      <h1 class="h1">Ironhack Merchandising Shop</h1>
+    </header>
+    <div class="container">
+      <div class="wrap">
+        <span class="product-name">IronBubble-head</span>
+      </div>
+      <div class="wrap">
+        <span class="unit-cost">$25,00</span>
+      </div>
+      <div class="wrap">
+        <label>QTY</label>
+        <input class="quantity" type="text" value="0"/>
+      </div>
+      <div class="wrap">
+        <span class="total-price">$0,00</span>
+      </div>
+      <div class="wrap">
+        <button class="btn btn-delete">Delete</button>
+      </div>
+    </div>
+    <div class="wrap center">
+      <button id="calc-prices-button" class="btn btn-success">Calculate Prices</button>
+    </div>
+  </div>
+  <script src="js/index.js"></script>
 </body>
+
 </html>
