--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -21,22 +21,42 @@
         <span class="product-name">IronBubble-head</span>
       </div>
       <div class="wrap">
-        <span class="unit-cost">$25,00</span>
+        <span class="unit-cost">$25.10</span>
       </div>
       <div class="wrap">
         <label>QTY</label>
-        <input class="quantity" type="text" value="0"/>
+        <input class="quantity" type="number" value="0"/>
       </div>
       <div class="wrap">
-        <span class="total-price">$0,00</span>
+        <span class="total-price">$0.00</span>
       </div>
       <div class="wrap">
         <button class="btn btn-delete">Delete</button>
       </div>
     </div>
-    <div class="wrap center">
-      <button id="calc-prices-button" class="btn btn-success">Calculate Prices</button>
+  </div>
+  <div class="container">
+    <div class="wrap">
+      <span class="product-name">IronShirt</span>
     </div>
+    <div class="wrap">
+      <span class="unit-cost">$15.50</span>
+    </div>
+    <div class="wrap">
+      <label>QTY</label>
+      <input class="quantity" type="number" value="0"/>
+    </div>
+    <div class="wrap">
+      <span class="total-price">$0.00</span>
+    </div>
+    <div class="wrap">
+      <button class="btn btn-delete">Delete</button>
+    </div>
+  </div>
+  <div class="wrap center">
+    <button id="calc-prices-button" class="btn btn-success">Calculate Prices</button>
+  </div>
+</div>
   </div>
   <script src="js/index.js"></script>
 </body>
