falta ajustes css

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -8,14 +8,15 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
   <link rel="stylesheet" href="./css/style.css">
   <script type="text/javascript" src="./js/index.js"></script>
-  <title>Ironhack cart</title>
+  <title>inicio</title>
 </head>
 
 <body>
   <div class="content">
     <header>
-      <h1 class="h1">Ironhack Merchandising Shop</h1>
+      <h1 class="h1"></h1>
     </header>
+    <div class="box">
     <div class="container">
       <div class="wrap">
         <span class="product-name">IronBubble-head</span>
@@ -53,10 +54,7 @@
         <button class="btn btn-delete">Delete</button>
       </div>
     </div>
-    <div id="new-items" class="container">
-
-    </div>
-
+  </div>
     <div class="container">
       <div class="wrap">
         <input id="new-item-name" type="text" placeholder="Product Name" />
