--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -14,53 +14,56 @@
 <body>
   <div class="content">
     <header>
-      <h1 class="h1"></h1>
+      <h1 class="h1">IronHack Merchandasing Shop</h1>
     </header>
     <div class="box">
-    <div class="container">
-      <div class="wrap">
-        <span class="product-name">IronBubble-head</span>
+  
+      <div class="container">
+        <div class="wrap">
+          <span class="product-name">IronBubble-head</span>
+        </div>
+        <div class="wrap">
+          <span class="unit-cost">$25.10</span>
+        </div>
+        <div class="wrap">
+          <label>QTY</label>
+          <input class="quantity" type="number" value="0" />
+        </div>
+        <div class="wrap">
+          <span class="price">$0.00</span>
+        </div>
+        <div class="wrap">
+          <button class="btn btn-delete">Delete</button>
+        </div>
       </div>
-      <div class="wrap">
-        <span class="unit-cost">$25.10</span>
-      </div>
-      <div class="wrap">
-        <label>QTY</label>
-        <input class="quantity" type="number" value="0" />
-      </div>
-      <div class="wrap">
-        <span class="price">$0.00</span>
-      </div>
-      <div class="wrap">
-        <button class="btn btn-delete">Delete</button>
-      </div>
-    </div>
 
-    <div class="container">
-      <div class="wrap">
-        <span class="product-name">IronShirt</span>
-      </div>
-      <div class="wrap">
-        <span class="unit-cost">$15.50</span>
-      </div>
-      <div class="wrap">
-        <label>QTY</label>
-        <input class="quantity" type="number" value="0" />
-      </div>
-      <div class="wrap">
-        <span class="price">$0.00</span>
-      </div>
-      <div class="wrap">
-        <button class="btn btn-delete">Delete</button>
+      <div class="container">
+        <div class="wrap">
+          <span class="product-name">IronShirt</span>
+        </div>
+        <div class="wrap">
+          <span class="unit-cost">$15.50</span>
+        </div>
+        <div class="wrap">
+          <label>QTY</label>
+          <input class="quantity" type="number" value="0" />
+        </div>
+        <div class="wrap">
+          <span class="price">$0.00</span>
+        </div>
+        <div class="wrap">
+          <button class="btn btn-delete">Delete</button>
+        </div>
       </div>
     </div>
-  </div>
     <div class="container">
-      <div class="wrap">
-        <input id="new-item-name" type="text" placeholder="Product Name" />
-      </div>
-      <div class="wrap">
-        <input id="new-item-cost" type="text" placeholder="Ex: 99.10" />
+      <div class="input-box">
+        <div class="wrap">
+          <input id="new-item-name" type="text" placeholder="Product Name" required>
+        </div>
+        <div class="wrap">
+          <input id="new-item-cost" type="text" placeholder="Ex: 99.10" required>
+        </div>
       </div>
       <div class="wrap">
         <button id="new-item-create" class="btn">Create</button>
@@ -70,10 +73,10 @@
     <div class="wrap center">
       <button id="calc-prices-button" class="btn btn-success">Calculate Prices</button>
     </div>
-  <footer>
-    <h1 class="h1">Total Price: <spam class="total-price">$0.00</spam>
-    </h1>
-  </footer>
+    <footer>
+      <h1 class="h1">Total Price: <spam class="total-price">$0.00</spam>
+      </h1>
+    </footer>
   </div>
   <script src="js/index.js"></script>
 </body>
